--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,15 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "array": "cpp",
+        "chrono": "cpp",
+        "ctime": "cpp",
+        "set": "cpp",
+        "ratio": "cpp",
+        "string_view": "cpp",
+        "utility": "cpp",
+        "initializer_list": "cpp",
+        "thread": "cpp"
     }
 }
