refactored code, added mailpool parameter to server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,8 @@
         "string_view": "cpp",
         "utility": "cpp",
         "initializer_list": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "condition_variable": "cpp",
+        "mutex": "cpp"
     }
 }
