deleted default constructors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,6 @@
         "thread": "cpp",
         "condition_variable": "cpp",
         "mutex": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
