added read/list functionality, fixed bug in HandleSendMessage(), improved getFiles()

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,5 +53,5 @@
         "condition_variable": "cpp",
         "mutex": "cpp"
     },
-    "C_Cpp.errorSquiggles": "Disabled"
+    "C_Cpp.errorSquiggles": "Enabled"
 }
